--- a/crudposts/templates/list_posts.html
+++ b/crudposts/templates/list_posts.html
@@ -37,6 +37,16 @@
         {% endfor %}
         <br>
     </ul>
+
+  <nav aria-label="Page navigation example">
+    <ul class="inline-flex -space-x-px text-sm">
+      {% for page in total_pages %}
+        <li>
+          <a href="/?p={{ page }}" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">{{ page }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+  </nav>
 </body>
 </html>
 
