--- a/crudposts/templates/search.html
+++ b/crudposts/templates/search.html
@@ -43,6 +43,7 @@
           <a href="/posts/{{ post.id }}" class="block mt-1 text-lg leading-tight font-medium text-black hover:underline">Post {{ post.id }}:  {{ post.title }} </a>
 
               <p class="mt-2 text-slate-500">{{ post.body }}</p>
+              <a href="/delete/{{ post.id }}"><button type="button" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete</button></a>
                 <strong>Word Count:</strong> {{ post.body|wordcount }}<br>
             </div>
           </div>
